<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shiko</string>
    <string name="title_home">Əsas</string>
    <string name="title_dashboard">Panel</string>
    <string name="title_notifications">Bildirişlər</string>
    <string name="label_language">Dil seçin</string>
    <string name="lang_az">Azərbaycan dili</string>
    <string name="lang_en">English</string>
    <string name="lang_ru">Русский</string>
    <string name="label_enter_word">Söz daxil edin</string>
    <string name="hint_enter_word">Buraya yazın…</string>
    <string name="cd_swap_langs">Dilləri dəyiş</string>
</resources>
